<resources>
    <string name="app_name">Study Jam</string>

    <string name="action_settings">Settings</string>

    <!-- NAVIGATION DRAWER -->
    <string name="drawer_settings">Configurações</string>
    <string name="drawer_open">Abrir Navegação</string>
    <string name="drawer_close">Fechar Navegação</string>

    <string name="fragment_01_birthdaycard">Birthday Card</string>
    <string name="text_birthday_card_happybirthday">Happy Birthday, Jose!</string>
    <string name="text_birthday_card_from">From: Joao Carlos</string>

    <string name="fragment_02_scorecounter">Score Counter</string>
    <string name="team_name_a">Team A</string>
    <string name="team_name_b">Team B</string>
    <string name="team_score_default">0</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>

    <string name="fragment_03_justjava">Just Java</string>
    <string name="hint_name">Type your name </string>
    <string name="toppings">Toppings</string>
    <string name="topping_chocolate">Chocolate</string>
    <string name="topping_cream">Cream</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="quantity_default">0</string>

    <string name="fragment_04_cookie">Cookie</string>
    <string name="btn_eat_cookie">EAT COOKIE</string>
    <string name="before_cookie">I\'m so hungry</string>
    <string name="after_cookie">I\'m so full</string>

</resources>
