<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gyndroids.com.studyjam.fragments.JustJava">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="?attr/listPreferredItemPaddingRight"
        android:layout_marginLeft="?attr/listPreferredItemPaddingLeft"
        android:layout_marginRight="?attr/listPreferredItemPaddingRight"
        android:layout_marginStart="?attr/listPreferredItemPaddingLeft"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            style="@style/TextHeader"
            android:layout_marginTop="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/chk_topping_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping_chocolate"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chk_topping_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topping_cream"
            android:textSize="16sp" />

        <TextView
            style="@style/TextHeader"
            android:layout_marginTop="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_less_coffe"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/txt_qtd_coffe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_default" />

            <Button
                android:id="@+id/btn_more_coffe"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:textColor="@android:color/white" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_submit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_order_sumarry"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>